Fix autocomplete dropdown hidden behind footer

--- a/app/styles/components/dwcm-autocomplete-textfield.less
+++ b/app/styles/components/dwcm-autocomplete-textfield.less
@@ -21,6 +21,8 @@
     border-radius: 0 0 @border-radius-base @border-radius-base;
     font-size: 13px;
 
+    margin-bottom: calc(@footer-height + 10px);
+
     .box-shadow(0 6px 12px rgba(0, 0, 0, 0.175));
 
     li {
